# routes/api/auth.api.php
@@ -1,0 +1,23 @@
+<?php
+
+use Illuminate\Support\Facades\Route;
+
+use App\Http\Controllers\AuthController;
+use App\Constants\AuthRoutes;
+
+
+Route::group(
+    [
+        'prefix' => 'auth'
+    ],
+    function () {
+        Route::post('/login', [AuthController::class, AuthRoutes::LOGIN]);
+        Route::post('/register', [AuthController::class, AuthRoutes::REGISTER]);
+        Route::post('/validateToken', [AuthController::class, AuthRoutes::VALIDATE_TOKEN]);
+        Route::middleware(['auth:api'])->group(function () {
+            Route::get('/generateTOTPSecret', [AuthController::class, AuthRoutes::GENERATE_TOTP_SECRET]);
+            Route::get('/generateTOTPQRCode', [AuthController::class, AuthRoutes::GENERATE_TOTP_QR_CODE]);
+            Route::post('/validateTOTPSecret', [AuthController::class, AuthRoutes::VALIDATE_TOTP_SECRET]);
+        });
+    }
+);
