# routes/api/user.api.php
@@ -1,0 +1,6 @@
+<?php
+
+use App\Http\Controllers\UserController;
+use Illuminate\Support\Facades\Route;
+
+Route::middleware('auth:api')->apiResource('users', UserController::class);
